# rust-exercise

design-pattern-23/command/: Cargo.toml
design-pattern-23/command/src/: main.rs
design-pattern-23/strategy/: Cargo.toml
design-pattern-23/strategy/src/: main.rs
grrs/: Cargo.toml
grrs/src/: main.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
rust-book/1.2/: main
rust-book/1.3/hello_cargo/: Cargo.toml
rust-book/10/workspace/src/: main.rs
rust-book/11/adder/: Cargo.toml
rust-book/11/adder/src/: lib.rs
rust-book/12/minigrep/: Cargo.toml
rust-book/12/minigrep/src/: lib.rs
rust-book/13/minigrep/src/: lib.rs
rust-book/13/workspace/src/: main.rs
rust-book/15/tree/: Cargo.toml
rust-book/15/workspace/src/: lib.rs  main.rs
rust-book/16/mutex/: Cargo.toml
rust-book/16/mutex/src/: main.rs
rust-book/16/workspace/src/: main.rs
rust-book/2/guessing_game/: Cargo.toml
rust-book/2/guessing_game/src/: main.rs
rust-book/3/workspace/: Cargo.toml
rust-book/3/workspace/src/: main.rs
rust-book/4/workspace/src/: main.rs
rust-book/5/workspace/src/: main.rs
rust-book/6/workspace/src/: main.rs
rust-book/7/communicator/: Cargo.toml
rust-book/7/communicator/src/: lib.rs  main.rs
rust-book/8/workspace/src/: main.rs
rust-book/9/workspace/src/: main.rs
rust-by-example/variable_bindings/: Cargo.toml
rust-by-example/variable_bindings/src/: main.rs
